--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
         "vite": "^4.0.0"
     },
     "dependencies": {
-        "react-icons": "^5.0.1"
+        "react-compare-image": "^3.4.0",
+        "react-icons": "^5.0.1",
+        "react-responsive-carousel": "^3.2.23"
     }
 }
