--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "dependencies": {
         "react-compare-image": "^3.4.0",
         "react-icons": "^5.0.1",
+        "react-modal": "^3.16.1",
         "react-responsive-carousel": "^3.2.23"
     }
 }
